responsive page at 768 done & modifying some style for 980

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
 		</div>
 		<div class="container" style="margin-top:100px;">
 			<div class="main">
-				<h2 class="heading">Portfolio</h2>
-				<hr>
+				<h2 class="portfolioHeading">Portfolio</h2>
+				<hr id="lineHeader">
 				<div id="gallery">
 					<section class="row">
 						<a href="#"><div class="column" id="first"><div class="boxName"><h6>Trivia Games</h6></div></div></a>
