--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 		<div class="header">	
 			<nav id="navbar">
 				<h1 class="name">Mark Almanassra</h1>
-				<a href="#" id="menu-icon"></a>
-		    	<ul>
+<!-- 				<a href="#" id="menu-icon"></a>
+ -->		    	<ul>
 					<li><a href="index.html">About</a></li>
 					<li class="none">|</li>
 					<li><a href="portfolio.html">Portfolio</a></li>
